@@ -17,6 +17,7 @@ ddetect (0.100) UNRELEASED; urgency=low
   * Joey Hess and Christian Perrier
     - Add support for firewire CDs, including scsi bus rescanning for 2.4
       kernels.
+    - Have discover load bridge support so it will find ieee1394 bridges.
 
  -- Per Olofsson <pelle@dsv.su.se>  Wed, 26 May 2004 22:28:32 +0200
 
